  name as an old one.
: Added client-side validation to admin pages.
: Allow admins to delegate power to developers, on a per-project basis.
: Added ability to disable all email sent from the system.
: Fixed a bug with not being able to change the name of the 'Developer' group.
: Added tracking of changes in priority to the bug history.

-- 0.9.1 -- 4 Jan 2003
: Fixed bugs with PostgreSQL

-- 0.9.0 -- 25 Oct 2002
: Replaced the mail function with one that encodes (i18n support).
: Added four additional fields for tracking bug information: Database type
  and version, Environment, Closed Version, To-be-closed Version.
: Removed English text from templates for better localization.
: Added option for sending emails MIME-encapsulated.
: Cleaned up HTML.
: Added list of saved queries to the home page and an option to disable that
  list.
: Updated translations.
: Cleaned up printing of bug detail page.
: Added required files from PEAR (DB.php, etc.) and Smarty to the distribution.
: Improved compatibility with IIS.
: Fixed various small bugs.

-- 0.8.2 -- 8 May 2002
: Fixed bugs with ordering by dates in the bug list, self-referencing URLs
  pointing to php.exe on windows, errors with the attachment list when not
  logged in, forming the CC list when mailing bug changes, listing CCs on the
  bug form, scrollbars on the popup pages, logging in from the account creation
  page, and resetting the project id when editing a bug of an inactive project.
: Fixed session problems with PHP 4.0.6.
: Added some database connection error handling.

-- 0.8.1 -- 13 Apr 2002
: Fixed bugs with version and component creation.
: Bug fixed with displaying both created date and last modified date in the bug
  list.

-- 0.8.0 -- 11 Apr 2002
: Switched database abstraction layer to PEAR::DB.
: Added bug dependencies.
: Added Oracle 8.1.x support.
: Added "Remember me" functionality.
: Fixed bugs with losing login info.