@@ -20,7 +20,7 @@
 // along with phpBugTracker; if not, write to the Free Software Foundation,
 // Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 // ------------------------------------------------------------------------
-// $Id: en.php,v 1.38 2003/06/04 18:47:20 kennyt Exp $
+// $Id: en.php,v 1.39 2003/07/23 01:22:12 kennyt Exp $
 
 $STRING = array(
 	'lang_charset' => 'iso-8859-1',
@@ -103,7 +103,7 @@ $STRING = array(
 		'Database' => 'Database',
 		'ReportedOnSite' => 'Reported on Site',
 		'Summary' => 'Summary',
-		'DescriptionEntry' => 'A description entry',
+		'DescriptionEntry' => 'Description / Comment',
 		'SortBy' => 'Sort By',
 		'SortBy_BugNumber' => 'Bug Number',
 		'SortBy_Severity' => 'Severity',
