@@ -11,6 +11,7 @@
 : Added ability to disable all email sent from the system.
 : Fixed a bug with not being able to change the name of the 'Developer' group.
 : Added tracking of changes in priority to the bug history.
+: You can now search on "additional comments" and "description".
 
 -- 0.9.1 -- 4 Jan 2003
 : Fixed bugs with PostgreSQL
